0.9.15 (1.0.0-rc3)
* Client: new TextUI commands ("arm", "unarm", "armed") help to secure your stealth addresses' scan-keys
* Some cosmetics on the souce code

0.9.14 - 2014-05-13 (1.0.0-rc2)
* Qdb: Uses malloc() and free() from libc, to optimize usage of system memory (skips garbage collector)
* Client: improved statistics page of WebUI and renamed from Stats to Counters
* Client: added new command "age" to TextUI

0.9.13 - 2014-05-10 (1.0.0-rc1)
* Huge refactor of the entire repo
* Support for stealth addresses
* Wallet: support for "-p" switch that forces asking for seed password
* Wallet: support for "-f" swicth, to exclude fee from the fist output's value
* Wallet: many other changes

0.9.10 (intermediate checkpoint tag)
* Client: an address listed more than once in a wallet gets removed (was showing wrong balance)
* Wallet: can generate a stealth address. Use "-scankey <key>". Uses the first private key for spend.

0.9.9 - 2014-04-30 *LAST_STABLE*
* Wallet: if you specify "-msg <text>" parameter it adds a null output with the text to the tx
* Client: fixed a crash when loading a transaction with an output that has no standard address
* Client: proper removing (from the memory pool) transactions altered by the malleability
* Client: Relevant records are removed from SpentOutputs when expiring txs from mempool (memleak fix)
* Client: Do not save connected (alive) peer's record into DB more often than once per minute
* goc - a new tool to control the node from a remote console, using a WebUI interface
* peers - a new tool to display content of the peers database
* base58 - a new tool to encode/decode base58 strings
* Added "restore leading zeros" to btc.Decodeb58(), to reflect behaviour from the satoshi's code

0.9.8 - 2014-04-22
* Added locally served "Help" page to WebUI
* Some additional features on WebUI's "Home" page (e.g. network's hasharate)
* The block database uses a different index file ("blockchain.new" instead of "blockchain.idx")