@@ -1,5 +1,6 @@
 0.9.15 (1.0.0-rc3)
 * Client: new TextUI commands ("arm", "unarm", "armed") help to secure your stealth addresses' scan-keys
+* Client: the balance of all the wallets gets pre-cached while opening UTXO database
 * Some cosmetics on the souce code
 
 0.9.14 - 2014-05-13 (1.0.0-rc2)
